# besunny-ai

./: .dockerignore  .gitignore  .nixpacks.toml  .railwayignore  .railwayignore-frontend  BOT_POLLING_FIXES_SUMMARY.md  CLIENT_HANDOFF_DOCUMENT.md  CURRENT_DEPLOYMENT_STATE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_SEQUENCE.md  DEPLOYMENT_WORKFLOW.md  DOCKER_README.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.railway  Dockerfile.backup  Dockerfile.frontend  FULL_STACK_V17_DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md  HEALTHCHECK_FIX_SUMMARY.md  MANUAL_REFRESH.md  MULTI_SERVICE_DEPLOYMENT.md  Makefile  NUCLEAR_DEPLOYMENT_STRATEGY.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_READINESS.md  PYTHON_ISSUES_RESOLVED.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_JSON_DEPLOYMENT.md  RAILWAY_PORT_CONFIGURATION.md  RAILWAY_SPLIT_DEPLOYMENT.md  README.md  SERVICE_DIRECTORY_STRUCTURE.md  STAGING_TROUBLESHOOTING.md  VERSION_14_SUMMARY.md  VERSION_15_SUMMARY.md  VERSION_17_DEPLOYMENT.md  VERSION_17_SUMMARY.md  add_google_credentials_columns.sql  (+75 more)
.railway/: railway-backend.toml  railway-frontend.toml
backend/: Dockerfile  Dockerfile.dev  PHASE1_SUMMARY.md  README.md  REAL_SOLUTION_403_ERROR.md  check_domain_delegation.py  check_gmail_api.py  check_gmail_status.py  check_gmail_watches_data.py  convert_key_to_base64.py  debug_gmail_watch_api.py  debug_pubsub_detailed.py  debug_pubsub_topic.py  docker-compose.yml  env.example  railway-env-vars.txt  railway.toml  requirements-compatible.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  service-account-key.template.json  simple-health-server.py  simple-test.py  start.py  start_v17.py  test-health.py  test-imports.py  test_app.py  test_app_v10.py  (+32 more)
backend_temp/: pyproject.toml
backend_temp/app/api/v1/: __init__.py  calendar.py  user.py
backend_temp/app/api/v1/webhooks/: drive_webhook.py
backend_temp/app/core/: config.py  redis_manager.py
backend_temp/app/models/schemas/: __init__.py  drive.py  email.py  meeting.py  project.py
backend_temp/app/services/: google_enhanced.py
backend_temp/app/services/ai/: README.md  ai_service.py  document_workflow_service.py
backend_temp/app/services/attendee/: __init__.py
backend_temp/app/services/auth/: google_token_service.py
backend_temp/app/services/drive/: drive_file_subscription_service.py  drive_webhook_handler.py
backend_temp/app/services/email/: gmail_watch_setup_tasks.py
backend_temp/app/services/enterprise/: __init__.py  business_rules_service.py  ml_service.py  usage_tracking_service.py
backend_temp/app/services/sync/: tasks.py
backend_temp/app/services/user/: tasks.py  username_service.py
backend_temp/app/tests/: test_ai_services.py
(+568 files in other folders)
